Fix Overflow

--- a/app/assets/stylesheets/_global.scss
+++ b/app/assets/stylesheets/_global.scss
@@ -1,6 +1,12 @@
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   font-family: $body-text-font-family;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 section {
